fix(runtime): close reviewed M4 vision and M5 tool-loop gaps
The handoff findings were confirmed in source; keep Vision wired, drawing PDFs waiting, HTTPS-only tools, and original skill packages without claiming device or stage acceptance.